tdf#119461 Fix focus hidden on deck collapse

Makes Space key behavior the same as mouse click. Focus remains on the
tab button when the deck collapses.

Makes Enter key never collapses the deck but to open if collapsed and
always place focus on the first panel title.

Change-Id: Id6d7624e88b421dcfc62f3d0e79986f10c76a65d